# contrast-game

./: .gitignore  CHATLOG.md  README.md  REPORT-en.md  REPORT.md
backend/: ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py  games.py  tournaments.py
backend/app/core/: game_manager.py  rule_engine.py
backend/app/models/: board.py  move.py
backend/app/sample_client/: README.md  random_player.py
backend/tests/: conftest.py  test_game_manager.py  test_rule_engine.py  test_sample_client.py
frontend/: next.config.js  package-lock.json  package.json  playwright.config.ts
frontend/cypress/e2e/: player_movement.cy.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/components/: GameSetupPanel.tsx  Piece.tsx
frontend/test-results/: .last-run.json
frontend/tests/e2e/: cooperative_victory.spec.ts  player_movement.spec.ts
